Akeeba Data Compliance 2.0.0
================================================================================
+ Rewritten to use FOF 4.0
+ Renamed ViewTemplates to tmpl (Joomla 4 convention, with fallback code for Joomla 3)

Akeeba Data Compliance 1.2.5
================================================================================
+ Supports controller as an alias for view in Joomla 4
~ Now using common view templates from our FOF framework for consistency across our software

Akeeba Data Compliance 1.2.4
================================================================================
- Removed PHP 7.1 support
~ Add PHP 8.0 in the list of known PHP versions, recommend PHP 7.4 or later
# [HIGH] Joomla 4 beta 6 changed how sessions work, breaking everything
# [HIGH] Typo in installation SQL file would cause an error on first install

Akeeba Data Compliance 1.2.3
================================================================================
+ CLI tool to replay the audit log
+ Custom error pages when FEF is not installed or an unhandled PHP exception occurred
~ Replace zero datetime with nullable datetime (gh-32)
~ DEPRECATED: The cookie plugin only works with Joomla 3 and will be removed in version 2.0
~ Update path to cacert.pem
~ Use Joomla's domain name when setting the cookie acceptance, er, cookie
~ Banner links to EU sites should have rel="noopener"
# [LOW] Minified JS / CSS was not being loaded by default

Akeeba Data Compliance 1.2.2
================================================================================
+ Joomla 4 compatibility (pre-release beta 1)
~ Use JAccess instead of DB queries [gh-29]
# [LOW] Public site pages flash when the cookie plugin is enabled
# [LOW] Empty box when viewing the Options page of a different user as an admin
# [MEDIUM] Cookie popup shows up in Off-line mode but cannot be acted upon
# [HIGH] Cookies plugin would fail when using path-style URLs to access articles (thank you @brianteeman for reporting this)